--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,6 +36,22 @@ layout: compress
                 <div class="entry-meta">
                 {% include meta.html %}
                 </div>
+				<!-- 多说评论框 start -->
+				<div class="ds-thread" data-thread-key={{ page.id }} data-title={{ page.title }} data-url="vivianking6855.github.io/{{ page.url }}"></div>
+				<!-- 多说评论框 end -->
+				<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+				<script type="text/javascript">
+				var duoshuoQuery = {short_name:"vivianking6855"};
+					(function() {
+						var ds = document.createElement('script');
+						ds.type = 'text/javascript';ds.async = true;
+						ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+						ds.charset = 'UTF-8';
+						(document.getElementsByTagName('head')[0] 
+						 || document.getElementsByTagName('body')[0]).appendChild(ds);
+					})();
+				</script>
+				<!-- 多说公共JS代码 end -->
             </div>
         </div>
         {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
