--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,6 +36,18 @@ layout: compress
                 <div class="entry-meta">
                 {% include meta.html %}
                 </div>
+				<!-- JiaThis Button BEGIN -->
+				<div class="jiathis_style_32x32">
+					<a class="jiathis_button_qzone"></a>
+					<a class="jiathis_button_tsina"></a>
+					<a class="jiathis_button_tqq"></a>
+					<a class="jiathis_button_weixin"></a>
+					<a class="jiathis_button_renren"></a>
+					<a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
+					<a class="jiathis_counter_style"></a>
+				</div>
+				<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+				<!-- JiaThis Button END -->
 				<!-- 多说评论框 start -->
 				<div class="ds-thread" data-thread-key={{ page.id }} data-title={{ page.title }} data-url="vivianking6855.github.io/{{ page.url }}"></div>
 				<!-- 多说评论框 end -->
