--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,14 +2,14 @@
 <hr>
 <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
 <span class="social-share">
-    <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" class="tag">
-        <span class="term"><i class="fa fa-facebook-square"></i> Like</span>
-    </a>
-    <a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}" title="Share on Twitter" class="tag">
-        <span class="term"><i class="fa fa-twitter-square"></i> Tweet</span>
-    </a>
-    <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" class="tag">
-            <span class="term"><i class="fa fa-google-plus-square"></i> +1</span>
-    </a>
+	<!-- JiaThis Button BEGIN -->
+	<div class="jiathis_style_32x32" style="float:right">
+	<a class="jiathis_button_qzone"></a>
+	<a class="jiathis_button_tsina"></a>
+	<a class="jiathis_button_weixin"></a>
+	<a class="jiathis_counter_style"></a>
+	</div>
+	<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+	<!-- JiaThis Button END -->
 </span>
 <div style="clear:both"></div>
