--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,9 @@ layout: compress
                     </a>
                 </div>
                 {{ content }}
-
+                <div class="entry-meta">
+                {% include meta.html %}
+                </div>
             </div>
         </div>
     </header>
