--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,5 +46,8 @@ layout: compress
         </div>
     </header>
     {% include scripts.html %}
+	<!-- cnzz tongji -->
+	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1259299852'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1259299852%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+	<!-- cnzz tongji end-->
 </body>
 </html>
