--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -40,5 +40,8 @@ layout: compress
     {% include scripts.html %}
     <script src="{{ site.url }}/assets/js/wow.min.js"></script>
     <script type="text/javascript">(new WOW).init();</script>
+	<!-- cnzz tongji -->
+	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1259299852'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1259299852%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+	<!-- cnzz tongji end-->
 </body>
 </html>
