modify home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,11 +38,13 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         <!-- hide project
+						 <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
-                         </a>
+                         </a>-->
                  </h3>
             </div>
+			{% include nav.html %}
         </div>
     </header>
     {% include scripts.html %}
