--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -21,6 +21,14 @@ layout: compress
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
+				{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+				{% assign tags_list = site_tags | split:',' | sort %}
+				<ul class="entry-meta inline-list">
+				  {% for item in (0..site.tags.size) %}{% unless forloop.last %}
+					{% capture this_word %}{{ tags_list[item] | strip_newlines }}{% endcapture %}
+					<li><a href="#{{ this_word }}" class="tag"><span class="term">{{ this_word }}</span> <span class="count">{{ site.tags[this_word].size }}</span></a></li>
+				  {% endunless %}{% endfor %}
+				</ul>
                 <div class="post-list">
                     {% for post in site.posts %} 
                         {% if post.project == null %}
