--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,9 +6,7 @@
 				<a href="#">About</a>
 				<ul class="dl-submenu">
 					<li>
-						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
 						<h4>{{ site.title }}</h4>
-						<p>{{ site.description }}</p>
 					</li>
 					<li><a href="{{ site.url }}/about/"><span class="btn btn-inverse">Learn More</span></a></li>
 					{% if site.email %}<li>
@@ -83,11 +81,10 @@
 				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
-				<a href="#">Posts</a>
-				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
-				</ul>
+				<a href="{{ site.url }}/posts/">All Posts</a>
+			</li>
+			<li>
+				<a href="{{ site.url }}/tags/">All Tags</a>
 			</li>
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
