--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -89,5 +89,8 @@
 		    {% endif %}
 		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
 		  {% endfor %}
+		  	<li>
+				<a href="{{ site.url }}/posts/">All Posts</a>
+			</li>
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
