--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,10 +38,12 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                          </a>
-                         <!-- hide project
+						 <a class="btn zoombtn" href="{{ site.url }}/tags">
+                         Tags
+                         </a>
 						 <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
-                         </a>-->
+                         </a>
                  </h3>
             </div>
         </div>
