--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,9 +32,6 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                         About
-                         </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                          </a>
@@ -44,6 +41,9 @@ layout: compress
 						 <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
                          </a>
+						<!-- <a class="btn zoombtn" href="{{ site.url }}/about">
+                         About
+                         </a> -->
                  </h3>
             </div>
         </div>
