--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,6 +8,9 @@
 			<li>
 				<a href="{{ site.url }}/posts/">All Posts</a>
 			</li>
+			<li>
+				<a href="{{ site.url }}/about/">About Me</a>
+			</li>
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
 		        {% assign domain = '' %}
