--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,10 @@
           <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}">大类分解</a>
+          <a href="{{ '/categories/' | prepend: site.baseurl }}">大类</a>
         </li>
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">小类内聚</a>
+          <a href="{{ '/tag' | prepend: site.baseurl }}">小类</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -31,11 +31,7 @@
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
             <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于作者</a></li>
-            <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">我的书单</a></li>
-            <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">推荐博客</a></li>
             <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS订阅</a></li>
-            <li class="divider"></li>
-            <li><a rel="nofollow" target="_blank" href="https://github.com/luoyan35714/LessOrMore.git">本项目</a></li>
           </ul>
         </li>
       </ul>
