--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,21 +16,21 @@
           <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}">大类</a>
+          <a href="{{ '/categories/' | prepend: site.baseurl }}">Category</a>
         </li>
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">小类</a>
+          <a href="{{ '/tag' | prepend: site.baseurl }}">Tag</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="{{ '/donate/' | prepend: site.baseurl }}"><strong>打赏</strong></a>
+          <a href="{{ '/donate/' | prepend: site.baseurl }}"><strong>Donate</strong></a>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于<b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
-            <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于作者</a></li>
+            <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">About Me</a></li>
             <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS订阅</a></li>
           </ul>
         </li>
