--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -574,10 +574,10 @@ pre code {
   overflow-y: scroll;
 }
 .container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin-right: 5px;
+  margin-left: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .container:before,
 .container:after {
