--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,13 @@ layout: default
 ---
 <div class="container docs-container">
   <div class="row">
+	{% if page.lefttree %}
     <div class="col-md-3">
       <div class="sidebar hidden-print" role="complementary">
         {% include lefttree.html %} 
       </div>
     </div>
+	{% endif %}
     <div class="col-md-9" role="main">
       <div class="panel docs-content">
         <div class="wrapper">
