--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="container docs-container">
   <div class="row">
-	{% if page.comments %}
+	{% if page.lefttrees %}
 		<div class="col-md-3">
 		  <div class="sidebar hidden-print" role="complementary">
 			{% include lefttree.html %} 
